--- a/app/src/main/res/drawable/background_accounts_second.xml
+++ b/app/src/main/res/drawable/background_accounts_second.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/rec_view_gray"
+        android:color="@color/contador_bg"
         />
 
     <stroke android:width="3dp"
-        android:color="@color/rec_view_gray"
+        android:color="@color/contador_bg"
         />
 
     <padding android:left="1dp"
