--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="green">#00FF00</color>
     <color name="dark_grey">#343434</color>
     <color name="cash_out">#ffc7c7</color>
-    <color name="rec_view_gray">#5a5a5a</color>
+    <color name="rec_view_gray">#36393F</color>
     <color name="rec_view_transactions">#282828</color>
     <color name="rec_view_title">#eed075</color>
     <color name="rec_view_negative_amount">#e4b31d</color>
