--- a/app/src/main/res/layout/rec_view_item_all_transactions.xml
+++ b/app/src/main/res/layout/rec_view_item_all_transactions.xml
@@ -5,9 +5,9 @@
     android:id="@+id/recVew_Item_AllTransactions"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="15dp"
     android:layout_marginBottom="2dp"
     android:background="@color/rec_view_transactions">
+
 
     <TextView
         android:id="@+id/text_title_allTrans"
@@ -29,17 +29,20 @@
         android:layout_height="wrap_content"
         android:textColor="@color/rec_view_title"
         android:text="$4,000.00"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/text_title_allTrans"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/text_title_allTrans" />
+        app:layout_constraintTop_toTopOf="@+id/text_title_allTrans"
+        />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="10dp" />
+        app:layout_constraintGuide_begin="32dp" />
 
     <TextView
         android:id="@+id/textPaidBy"
@@ -56,6 +59,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Yesterday"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/textPaidBy"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textPaidBy" />
@@ -70,5 +75,23 @@
         app:layout_constraintStart_toEndOf="@+id/textPaidBy"
         app:layout_constraintTop_toTopOf="@+id/textPaidBy"
         android:layout_marginStart="5dp" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView_transaction_emoji"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:textSize="15sp"
+            android:gravity="center"
+            android:text="💰" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
