--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -185,7 +185,23 @@
         android:label="fragment_contract_display"
         tools:layout="@layout/fragment_contract_display" >
         <argument
-            android:name="id"
+            android:name="contractId"
             app:argType="string" />
+        <action
+            android:id="@+id/action_contractDisplay_to_contractNewPayment"
+            app:destination="@id/contractNewPayment"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right" />
+        <argument android:name="microAccountId" />
+    </fragment>
+    <fragment
+        android:id="@+id/contractNewPayment"
+        android:name="be.kuleuven.elcontador10.ContractNewPayment"
+        android:label="fragment_contract_new_payment"
+        tools:layout="@layout/fragment_contract_new_payment" >
+        <argument
+            android:name="contractId"
+            app:argType="string" />
+        <argument android:name="microAccountId" />
     </fragment>
 </navigation>
