--- a/app/src/main/res/layout/fragment_contract_new.xml
+++ b/app/src/main/res/layout/fragment_contract_new.xml
@@ -35,7 +35,7 @@
             android:layout_width="75dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="@drawable/buttons"
+            android:background="@drawable/background_buttons"
             android:text="@string/cancel"
             android:textColor="@color/white" />
 
@@ -44,7 +44,7 @@
             android:layout_width="75dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="@drawable/buttons"
+            android:background="@drawable/background_buttons"
             android:text="@string/confirm" />
     </LinearLayout>
 
