--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -24,7 +24,7 @@
         android:orientation="horizontal"
         android:layout_marginTop="15dp">
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/payment_new_frequency_label"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/account"
