--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -108,17 +108,29 @@
             android:layout_marginStart="5dp" />
 
 
-        <ImageButton
-            android:id="@+id/imageButton_addPicture"
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/text_newTransaction_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/text_newTransaction_title"
-            app:srcCompat="@drawable/ic_baseline_add_a_photo_24"
             android:background="@drawable/new_account_category_outline"
-            android:layout_marginStart="10dp" />
+            android:padding="2dp">
+
+            <ImageButton
+                android:id="@+id/imageButton_addPicture"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/new_account_category_outline"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <androidx.constraintlayout.widget.Guideline
