image UI setting/upload fireBase

--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -116,9 +116,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/text_newTransaction_title"
             android:background="@drawable/new_account_category_outline"
-            android:padding="1dp">
+            >
+            <ImageView
+               android:padding="5dp"
+                android:id="@+id/imageView_final"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars"
+                android:background="@drawable/new_account_category_outline"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-            <ImageButton
+           <ImageButton
                 android:id="@+id/imageButton_addPicture"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -232,14 +244,7 @@
         android:textColor="@color/light_grey"
         android:layout_marginLeft="4dp"
         android:layout_marginStart="4dp" />
-    <ImageView
-        android:layout_marginTop="20dp"
-        android:maxWidth="80dp"
-        android:maxHeight="80dp"
-        android:id="@+id/imageView_final"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:srcCompat="@tools:sample/avatars" />
+
     <Button
         android:layout_marginTop="20dp"
         android:id="@+id/btn_confirm_NewTransaction"
@@ -248,17 +253,6 @@
         android:background="@drawable/background_buttons"
         android:text="@string/confirm"
      />
-
-    <Button
-        android:layout_marginTop="20dp"
-        android:id="@+id/btn_add_pictureFromGallery"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/background_buttons"
-        android:text="Add pic from Gallery"
-        />
-
-
 
 
 </LinearLayout>
