--- a/app/src/main/res/layout/fragment_choose_category.xml
+++ b/app/src/main/res/layout/fragment_choose_category.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.transactions.NewTransaction.ChooseCategory">
+    tools:context=".fragments.transactions.NewTransaction.Categories.ChooseCategory">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
