--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -207,7 +207,7 @@
     </fragment>
     <fragment
         android:id="@+id/chooseCategory"
-        android:name="be.kuleuven.elcontador10.fragments.transactions.NewTransaction.ChooseCategory"
+        android:name="be.kuleuven.elcontador10.fragments.transactions.NewTransaction.Categories.ChooseCategory"
         android:label="fragment_choose_category"
         tools:layout="@layout/fragment_choose_category" />
 </navigation>
