--- a/app/src/main/res/layout/fragment_transaction_display.xml
+++ b/app/src/main/res/layout/fragment_transaction_display.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
-            tools:context=".fragments.transactions.TransactionDisplay"
+            tools:context=".fragments.transactions.DisplayTransaction.TransactionDisplay"
            >
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -87,7 +87,8 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:background="@color/toolBar_color">
+                    android:background="@color/toolBar_color"
+                    >
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <TableLayout
@@ -240,6 +241,7 @@
                                     android:text="@string/notes" />
                                 <TextView
                                     android:layout_marginLeft="30dp"
+                                    android:layout_marginStart="30dp"
                                     android:id="@+id/txtNotesDisplay"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -248,21 +250,86 @@
 
                         </TableRow>
 
-
-
                 </TableLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:background="@color/toolBar_color"
+                    android:paddingHorizontal="30dp"
+                    >
+                        <TextView
+                            android:id="@+id/textView7"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/photo_captured"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <LinearLayout
+                    android:id="@+id/layout_photoDownloaded_holder"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:orientation="horizontal"
+                    android:padding="10dp"
+                    android:gravity="center">
+                        <ImageView
+                            android:layout_marginVertical="10dp"
+                            android:id="@+id/image_transaction_photoDownloaded"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/test_paper"
+                            />
+
+                </LinearLayout>
 
 
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/layout_addPhoto"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="20dp"
+                            android:visibility="gone"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView7">
+
+                                <TextView
+                                    android:id="@+id/text_add_image"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/add_an_image"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toBottomOf="@+id/btn_add_image" />
+
+                                <ImageButton
+                                    android:id="@+id/btn_add_image"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:contentDescription="@string/add_an_image"
+                                    app:layout_constraintBottom_toTopOf="@+id/text_add_image"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                    app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />
+
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:background="@color/toolBar_color"
+                    />
 
                 <Button
                             android:id="@+id/buttonDeleteTransaction"
                             android:layout_width="180dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="130dp"
+                            android:layout_marginTop="30dp"
                             android:text="@string/delete"
-                            android:background="@drawable/background_buttons"
- />
-
+                            android:background="@drawable/background_buttons" />
 
 
         </LinearLayout>
