--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -119,7 +119,7 @@
     </fragment>
     <fragment
         android:id="@+id/viewPagerHolder"
-        android:name="be.kuleuven.elcontador10.fragments.transactions.ViewPagerHolder"
+        android:name="be.kuleuven.elcontador10.fragments.accounts.ViewPagerHolderAccount"
         android:label="fragment_view_pager_holder"
         tools:layout="@layout/fragment_view_pager_holder" >
         <action
