--- a/app/src/main/res/menu/top_three_buttons_menu.xml
+++ b/app/src/main/res/menu/top_three_buttons_menu.xml
@@ -25,7 +25,8 @@
             android:icon="@drawable/ic_baseline_search_24"
             android:title="@string/search"
             android:visible="false"
-            app:showAsAction="ifRoom"/>
+            app:showAsAction="always|collapseActionView"
+            app:actionViewClass="androidx.appcompat.widget.SearchView" />
         <item android:id="@+id/menu_filter"
             android:icon="@drawable/ic_baseline_filter_alt_24"
             android:title="@string/filter"
