--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -201,9 +201,9 @@
     </fragment>
     <fragment
         android:id="@+id/contractNewPayment"
-        android:name="be.kuleuven.elcontador10.ContractNewPayment"
+        android:name="be.kuleuven.elcontador10.ContractNewSubContract"
         android:label="fragment_contract_new_payment"
-        tools:layout="@layout/fragment_contract_new_payment" >
+        tools:layout="@layout/fragment_contract_new_sub_contract" >
         <argument
             android:name="contractId"
             app:argType="string" />
