--- a/app/src/main/res/layout/fragment_contract_display.xml
+++ b/app/src/main/res/layout/fragment_contract_display.xml
@@ -196,7 +196,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="@string/payments"
+                android:text="@string/subContracts"
                 app:layout_constraintStart_toStartOf="@+id/contract_guide_left"
                 app:layout_constraintTop_toBottomOf="@+id/contract_notes" />
 
