--- a/app/src/main/res/layout/fragment_contract_subcontract.xml
+++ b/app/src/main/res/layout/fragment_contract_subcontract.xml
@@ -2,14 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/payment_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/background_accounts_first"
-    >
+    android:layout_height="match_parent"
+    tools:context="fragments.microaccounts.SubContractDisplay">
 
     <TextView
-        android:id="@+id/payment_amount"
+        android:id="@+id/subcontract_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -21,16 +19,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/payment_period"
+        android:id="@+id/subcontract_period"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:paddingBottom="16dp"
-        app:layout_constraintStart_toStartOf="@+id/payment_title"
-        app:layout_constraintTop_toBottomOf="@+id/payment_title" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/subcontract_title" />
 
     <TextView
-        android:id="@+id/payment_title"
+        android:id="@+id/subcontract_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
@@ -43,12 +43,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/payment_divider"
+        android:id="@+id/subonctract_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="16dp"
         android:background="?android:attr/listDivider"
-        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/payment_period" />
-
+        app:layout_constraintTop_toBottomOf="@+id/subcontract_period" />
 </androidx.constraintlayout.widget.ConstraintLayout>
